[tool.poetry]
packages = [{include = "devsynth", from = "src"}]
# Explicitly control packaged files for sdist/wheel hygiene
include = [
    "LICENSE",
    "README.md",
    # Ship scaffolding templates for users; lightweight and helpful
    "templates/**",
]
exclude = [
    # Do not ship tests in the wheel/sdist
    "tests/**",
    # Local and CI artifacts are excluded implicitly by .gitignore; keep explicit here for clarity
    "test_reports/**",
    "docs/archived/**",
]

[project]
name = "devsynth"
version = "0.1.0a1"
description = "DevSynth project"
readme = "README.md"
license = "MIT"
authors = [{name = "DevSynth Team"}]
requires-python = ">=3.12,<3.15"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dynamic = [
    "dependencies",
]

[tool.poetry.dependencies]
python = "<3.15,>=3.12"
typer = "^0.17.4"
rich = "*"
pydantic = "*"
pydantic-settings = "*"
langgraph = "*"
langchain = "*"
tiktoken = {version = "*", optional = true}
networkx = "*"
langchain-openai = "*"
langchain-community = "*"
openai = "*"
toml = "*"
requests = "*"
# Optional user interface dependencies
textual = {version = "*", optional = true}
# Pin FastAPI and Starlette to compatible versions to resolve MRO issues
fastapi = {version = "^0.115.5", optional = true}
starlette = {version = "^0.41.3", optional = true}
tinydb = {version = "*", optional = true}
duckdb = {version = "*", optional = true}
lmdb = {version = "*", optional = true}
faiss-cpu = {version = "*", optional = true, markers = "platform_system != 'Darwin' or platform_machine == 'arm64'"}
rdflib = "*"
astor = {version = "*", optional = true}
argon2-cffi = "*"
cryptography = "*"
prometheus-client = {version = "*", optional = true}
streamlit = {version = "*", optional = true}
httpx = {version = "*", optional = true}
chromadb = {version = "*", optional = true, markers = "platform_system != 'Darwin' or platform_machine == 'arm64'"}
kuzu = {version = "*", optional = true, markers = "platform_system == 'Linux' and platform_machine == 'x86_64'"}
numpy = "*"
transformers = {version = "*", optional = true}
# GUI dependencies
dearpygui = {version = "*", optional = true}
pyyaml = "*"
tqdm = "*"
lmstudio = {version = "*", optional = true}
hypothesis = "*"
filelock = "*"
cachetools = "*"
gitpython = "*"
nicegui = "*"
jsonschema = "*"

[tool.poetry.group.dev.dependencies]
responses = "*"
pytest = "*"
pytest-bdd = "*"
pytest-cov = "*"
pytest-benchmark = "*"
pytest-mock = "*"
pytest-xdist = "*"
pytest-rerunfailures = "*"
black = "*"
isort = "*"
flake8 = "*"
pre-commit = "*"
psutil = "*"
mypy = "*"
tinydb = "*"
faker = "*"
ipywidgets = "*"
trio = "*"
pytest-asyncio = "*"
httpx = "*"
uvicorn = "*"
pytest-html = "*"
bandit = "*"
safety = "*"
prometheus-client = "*"
freezegun = "*"
types-PyYAML = "^6.0.12.20250915"
types-jsonschema = "^4.25.1.20250822"
types-requests = "*"
types-networkx = "*"
types-tqdm = "*"
types-pytest = {path = "stubs/types-pytest", develop = true}
types-pytest-bdd = {path = "stubs/types-pytest-bdd", develop = true}
types-responses = {path = "stubs/types-responses", develop = true}
types-freezegun = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings-python = "*"
mkdocs-gen-files = "*"
mkdocs-include-markdown-plugin = "*"
mkdocs-typer2 = "*"
mkdocs-literate-nav = "*"
mkdocs-section-index = "*"

[project.optional-dependencies]
# docs: build the project documentation
# minimal: baseline runtime requirements without heavy optional dependencies
# retrieval: enables vector retrieval support via kuzu and faiss
# chromadb: use chromadb as the vector store
# gui: install Dear PyGui for a desktop GUI
docs = [
    "mkdocs>=0",
    "mkdocs-material>=0",
    "mkdocstrings-python>=0",
    "mkdocs-gen-files>=0",
    "mkdocs-include-markdown-plugin>=0",
    "mkdocs-typer2>=0",
    "mkdocs-literate-nav>=0",
    "mkdocs-section-index>=0",
    "hypothesis>=0",
]
minimal = [
    "typer>=0",
    "rich>=0",
    "pydantic>=0",
    "pydantic-settings>=0",
    "langgraph>=0",
    "networkx>=0",
    "toml>=0",
    "pyyaml>=0",
    "requests>=0",
]
retrieval = [
    "kuzu>=0; platform_system == \"Linux\" and platform_machine == \"x86_64\"",
    "faiss-cpu>=0; platform_system != \"Darwin\" or platform_machine == \"arm64\"",
]
chromadb = [
    "chromadb>=0; platform_system != \"Darwin\" or platform_machine == \"arm64\"",
    "tiktoken>=0",
]
lmstudio = ["lmstudio>=0"]
memory = [
    "tinydb>=0",
    "duckdb>=0",
    "lmdb>=0",
    "kuzu>=0; platform_system == \"Linux\" and platform_machine == \"x86_64\"",
    "faiss-cpu>=0; platform_system != \"Darwin\" or platform_machine == \"arm64\"",
    "chromadb>=0; platform_system != \"Darwin\" or platform_machine == \"arm64\"",
    "numpy>=0",
]
llm = ["tiktoken>=0", "httpx>=0"]
offline = ["transformers>=0"]
api = [
    "fastapi>=0.115.5,<0.116.0",
    "starlette>=0.41.3,<0.42.0",
    "prometheus-client>=0",
]
webui = ["streamlit>=0"]
webui_nicegui = ["nicegui>=0"]
gui = ["dearpygui>=0"]
textual_ui = ["textual>=0"]
tests = [
    "fastapi>=0.115.5,<0.116.0",
    "starlette>=0.41.3,<0.42.0",
    "httpx>=0",
    "tinydb>=0",
    "duckdb>=0",
    "lmdb>=0",
    "astor>=0",
    "pytest-rerunfailures>=0",
]
dev = [
    "responses>=0",
    "pytest>=0",
    "pytest-bdd>=0",
    "pytest-cov>=0",
    "pytest-mock>=0",
    "pytest-xdist>=0",
    "black>=0",
    "isort>=0",
    "pre-commit>=0",
    "psutil>=0",
    "mypy>=0",
    "pydantic-settings>=0",
    "toml>=0",
    "pyyaml>=0",
    "mkdocs>=0",
    "mkdocs-material>=0",
    "mkdocstrings-python>=0",
    "mkdocs-gen-files>=0",
    "mkdocs-include-markdown-plugin>=0",
    "mkdocs-typer2>=0",
    "mkdocs-literate-nav>=0",
    "mkdocs-section-index>=0",
]

[tool.poetry.scripts]
devsynth = "devsynth.adapters.cli.typer_adapter:run_cli"
mvuu-dashboard = "devsynth.application.cli.commands.mvuu_dashboard_cmd:mvuu_dashboard_cmd"

[tool.mypy]
mypy_path = [
    "src",
    "stubs/fastapi",
    "stubs/prometheus_client",
    "stubs/typer",
    "stubs/yaml",
    "stubs/devsynth",
    "stubs/streamlit",
    "stubs/types-pytest",
    "stubs/types-pytest-bdd",
    "stubs/types-responses",
    "stubs/types-requests",
    "stubs/toml",
    "stubs/chromadb",
    "stubs/boto3",
    "stubs/botocore",
    "stubs/rdflib",
    "stubs/jsonschema",
    "stubs/astor",
    "stubs/pydantic",
    "stubs/pydantic_settings",
    "stubs/coverage",
    "stubs/dataclasses",
    "stubs/rich",
    "stubs/argon2",
    "stubs/tiktoken",
    "stubs/networkx",
    "stubs/numpy",
    "stubs/faiss",
    "stubs/lmdb",
    "stubs/tinydb",
    "stubs/kuzu",
]
python_version = "3.12"
warn_return_any = true
# Keep third-party imports at `skip` even after stub packages land to limit
# type-checking churn while we continue tightening module-level overrides.
follow_imports = "skip"
exclude = [
  # Exclude nothing at path-level; use per-module overrides below.
]
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# Per-module options
[[tool.mypy.overrides]]
module = "tests._typing_utils"
follow_imports = "normal"

[[tool.mypy.overrides]]
module = [
  "rdflib",
  "rdflib.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "pydantic",
  "pydantic.*",
]
follow_imports = "normal"
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "devsynth.core.mvu.*"
ignore_errors = false

[[tool.mypy.overrides]]
module = [
  "devsynth.agents.sandbox",
  "devsynth.logging_setup",
  "devsynth.application.memory.circuit_breaker",
  "devsynth.application.code_analysis.ast_transformer",
]
ignore_errors = false
disallow_untyped_defs = true
disallow_incomplete_defs = true

# TODO(strict-typing-roadmap): Enumerate the remaining packages that fail
# strict typing because they depend on dynamic dataclass factories,
# third-party SDKs without usable stubs, or runtime-only protocol
# implementations. Track the cleanup in issues/strict-typing-roadmap.md and
# the per-package follow-ups under issues/restore-strict-typing-*.md.
[[tool.mypy.overrides]]
module = [
  "devsynth.adapters.*",
  "devsynth.agents.*",
  "devsynth.application.agents.*",
  "devsynth.application.cli._command_exports",
  "devsynth.application.cli.apispec",
  "devsynth.application.cli.autocomplete",
  "devsynth.application.cli.cli_commands",
  "devsynth.application.cli.config",
  "devsynth.application.cli.errors",
  "devsynth.application.cli.help",
  "devsynth.application.cli.ingest_cmd",
  "devsynth.application.cli.ingest_models",
  "devsynth.application.cli.models",
  "devsynth.application.cli.mvu_commands",
  "devsynth.application.cli.output",
  "devsynth.application.cli.progress",
  "devsynth.application.cli.registry",
  "devsynth.application.cli.requirements_commands",
  "devsynth.application.cli.requirements_wizard",
  "devsynth.application.cli.setup_wizard",
  "devsynth.application.cli.sprint_cmd",
  "devsynth.application.cli.utils",
  "devsynth.application.cli.vcs_commands",
  "devsynth.application.code_analysis.*",
  "devsynth.application.collaboration.*",
  "devsynth.application.config.*",
  "devsynth.application.documentation.*",
  "devsynth.application.edrr.*",
  "devsynth.application.ingestion.*",
  "devsynth.application.issues.*",
  "devsynth.application.knowledge_graph.*",
  "devsynth.application.llm.*",
  "devsynth.application.orchestration.*",
  "devsynth.application.performance.*",
  "devsynth.application.promises.*",
  "devsynth.application.prompts.*",
  "devsynth.application.requirements.*",
  "devsynth.application.server.*",
  "devsynth.application.sprint.*",
  "devsynth.application.utils.*",
  "devsynth.config.*",
  "devsynth.consensus",
  "devsynth.core.*",
  "devsynth.domain.*",
  "devsynth.fallback",
  "devsynth.integrations.*",
  "devsynth.logger",
  "devsynth.memory.*",
  "devsynth.metrics",
  "devsynth.methodology.*",
  "devsynth.observability.*",
  "devsynth.orchestration.*",
  "devsynth.ports.*",
  "devsynth.schemas.*",
  "devsynth.security.*",
  "devsynth.testing.generation",
  "devsynth.testing.mutation_testing",
  "devsynth.testing.performance",
  "devsynth.testing.prompts",
  "devsynth.testing.__init__",
  "devsynth.utils.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
  "devsynth.application.cli.command_output_formatter",
  "devsynth.application.cli.commands.dpg_cmd",
  "devsynth.application.cli.commands.webui_cmd",
]
ignore_errors = false
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
  "devsynth.application.cli.commands.align_cmd",
  "devsynth.application.cli.commands.alignment_metrics_cmd",
  "devsynth.application.cli.commands.analyze_manifest_cmd",
  "devsynth.application.cli.commands.atomic_rewrite_cmd",
  "devsynth.application.cli.commands.code_cmd",
  "devsynth.application.cli.commands.completion_cmd",
  "devsynth.application.cli.commands.config_cmd",
  "devsynth.application.cli.commands.config_cmds",
  "devsynth.application.cli.commands.dbschema_cmd",
  "devsynth.application.cli.commands.diagnostics_cmds",
  "devsynth.application.cli.commands.doctor_cmd",
  "devsynth.application.cli.commands.documentation_cmds",
  "devsynth.application.cli.commands.edrr_cycle_cmd",
  "devsynth.application.cli.commands.extra_cmds",
  "devsynth.application.cli.commands.gather_cmd",
  "devsynth.application.cli.commands.generate_docs_cmd",
  "devsynth.application.cli.commands.generation_cmds",
  "devsynth.application.cli.commands.ingest_cmd",
  "devsynth.application.cli.commands.init_cmd",
  "devsynth.application.cli.commands.inspect_cmd",
  "devsynth.application.cli.commands.inspect_code_cmd",
  "devsynth.application.cli.commands.inspect_config_cmd",
  "devsynth.application.cli.commands.interface_cmds",
  "devsynth.application.cli.commands.metrics_cmds",
  "devsynth.application.cli.commands.mvu_exec_cmd",
  "devsynth.application.cli.commands.mvu_init_cmd",
  "devsynth.application.cli.commands.mvu_lint_cmd",
  "devsynth.application.cli.commands.mvu_report_cmd",
  "devsynth.application.cli.commands.mvu_rewrite_cmd",
  "devsynth.application.cli.commands.mvuu_dashboard_cmd",
  "devsynth.application.cli.commands.pipeline_cmds",
  "devsynth.application.cli.commands.refactor_cmd",
  "devsynth.application.cli.commands.reprioritize_issues_cmd",
  "devsynth.application.cli.commands.run_pipeline_cmd",
  "devsynth.application.cli.commands.security_audit_cmd",
  "devsynth.application.cli.commands.serve_cmd",
  "devsynth.application.cli.commands.spec_cmd",
  "devsynth.application.cli.commands.test_cmd",
  "devsynth.application.cli.commands.test_metrics_cmd",
  "devsynth.application.cli.commands.testing_cmd",
  "devsynth.application.cli.commands.validate_manifest_cmd",
  "devsynth.application.cli.commands.validate_metadata_cmd",
  "devsynth.application.cli.commands.validation_cmds",
  "devsynth.application.cli.commands.vcs_chunk_commit_cmd",
  "devsynth.application.cli.commands.vcs_fix_rebase_pr_cmd",
  "devsynth.application.cli.commands.webapp_cmd",
]
ignore_errors = true

# TODO(typing-interface-agentapi-models): Track strict restoration in
# issues/restore-strict-typing-interface-agentapi-models.md.
# [[tool.mypy.overrides]]
# module = ["devsynth.interface.agentapi_models"]
# ignore_errors = true

# TODO(typing-interface-webui-state): Track strict restoration in
# issues/restore-strict-typing-interface-webui-state.md.
# [[tool.mypy.overrides]]
# module = ["devsynth.interface.webui_state"]
# ignore_errors = true

# TODO(typing-interface-enhanced-error-handler): Track strict restoration in
# issues/restore-strict-typing-interface-enhanced-error-handler.md.
# [[tool.mypy.overrides]]
# module = ["devsynth.interface.enhanced_error_handler"]
# ignore_errors = true

# TODO(typing-interface-ux-bridge): Track strict restoration in
# issues/restore-strict-typing-interface-ux-bridge.md.
# [[tool.mypy.overrides]]
# module = ["devsynth.interface.ux_bridge"]
# ignore_errors = true

# TODO(typing-interface-wizard-state-manager): Track strict restoration in
# issues/restore-strict-typing-interface-wizard-state-manager.md.
[[tool.mypy.overrides]]
module = ["devsynth.interface.wizard_state_manager"]
ignore_errors = true

# TODO(typing-interface-progress-utils): Track strict restoration in
# issues/restore-strict-typing-interface-progress-utils.md.
[[tool.mypy.overrides]]
module = ["devsynth.interface.progress_utils"]
ignore_errors = true

# TODO(typing-interface-output-formatter): Track strict restoration in
# issues/restore-strict-typing-interface-output-formatter.md.
# [[tool.mypy.overrides]]
# module = ["devsynth.interface.output_formatter"]
# ignore_errors = true

# TODO(typing-interface-simple-run): Track strict restoration in
# issues/restore-strict-typing-interface-simple-run.md.
[[tool.mypy.overrides]]
module = ["devsynth.interface.simple_run"]
ignore_errors = true

# TODO(typing-interface-shared-bridge): Track strict restoration in
# issues/restore-strict-typing-interface-shared-bridge.md.
[[tool.mypy.overrides]]
module = ["devsynth.interface.shared_bridge"]
ignore_errors = true

# TODO(typing-interface-command-output): Track strict restoration in
# issues/restore-strict-typing-interface-command-output.md.
[[tool.mypy.overrides]]
module = ["devsynth.interface.command_output"]
ignore_errors = true

# TODO(typing-interface-webui-bridge): Track strict restoration in
# issues/restore-strict-typing-interface-webui-bridge.md.
[[tool.mypy.overrides]]
module = ["devsynth.interface.webui_bridge"]
ignore_errors = true

# TODO(typing-interface-webui-rendering): Track strict restoration in
# issues/restore-strict-typing-interface-webui-rendering.md.
[[tool.mypy.overrides]]
module = ["devsynth.interface.webui.rendering"]
ignore_errors = true

# TODO(typing-interface-research-telemetry): Track strict restoration in
# issues/restore-strict-typing-interface-research-telemetry.md.
[[tool.mypy.overrides]]
module = ["devsynth.interface.research_telemetry"]
ignore_errors = true

# TODO(typing-interface-nicegui-webui): Track strict restoration in
# issues/restore-strict-typing-interface-nicegui-webui.md.
[[tool.mypy.overrides]]
module = ["devsynth.interface.nicegui_webui"]
ignore_errors = true

# TODO(typing-interface-dpg-bridge): Track strict restoration in
# issues/restore-strict-typing-interface-dpg-bridge.md.
[[tool.mypy.overrides]]
module = ["devsynth.interface.dpg_bridge"]
ignore_errors = true

# TODO(typing-interface-cli): Track strict restoration in
# issues/restore-strict-typing-interface-cli.md.
[[tool.mypy.overrides]]
module = ["devsynth.interface.cli"]
ignore_errors = true

# TODO(typing-interface-agentapi): Track strict restoration in
# issues/restore-strict-typing-interface-agentapi.md.
[[tool.mypy.overrides]]
module = ["devsynth.interface.agentapi"]
ignore_errors = true

# TODO(typing-interface-agentapi-enhanced): Track strict restoration in
# issues/restore-strict-typing-interface-agentapi-enhanced.md.
[[tool.mypy.overrides]]
module = ["devsynth.interface.agentapi_enhanced"]
ignore_errors = true

# TODO(typing-interface-webui-commands): Track strict restoration in
# issues/restore-strict-typing-interface-webui-commands.md.
[[tool.mypy.overrides]]
module = ["devsynth.interface.webui.commands"]
ignore_errors = true

# TODO(typing-interface-mvuu-dashboard): Track strict restoration in
# issues/restore-strict-typing-interface-mvuu-dashboard.md.
[[tool.mypy.overrides]]
module = ["devsynth.interface.mvuu_dashboard"]
ignore_errors = true

# TODO(typing-interface-webui-setup): Track strict restoration in
# issues/restore-strict-typing-interface-webui-setup.md.
[[tool.mypy.overrides]]
module = ["devsynth.interface.webui_setup"]
ignore_errors = true

# TODO(typing-interface-dpg-ui): Track strict restoration in
# issues/restore-strict-typing-interface-dpg-ui.md.
[[tool.mypy.overrides]]
module = ["devsynth.interface.dpg_ui"]
ignore_errors = true

# TODO(typing-application-cli-init): Track strict restoration in
# issues/restore-strict-typing-cli.md.
[[tool.mypy.overrides]]
module = ["devsynth.application.cli.__init__"]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
  "devsynth.application.cli.commands.run_tests_cmd",
  "devsynth.application.cli.long_running_progress",
  "devsynth.testing.run_tests",
]
ignore_errors = false
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
  "devsynth.application.memory",
  "devsynth.application.memory.*",
  "devsynth.domain.interfaces.memory",
]
follow_imports = "normal"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["chromadb", "chromadb.*"]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
per-file-ignores = [
  # Allow long docstrings and BDD steps in behavior tests; ignore common harmless scaffolding issues
  "tests/behavior/*.py: E501,F401,E402",
  "tests/behavior/steps/*.py: E501,F401,E402,F811",
  "tests/behavior/test_cli_ux_enhancements.py: F401",
  # Adapters contain deliberate import ordering and long lines due to external API constraints; documented in code comments
  "src/devsynth/adapters/agents/agent_adapter.py: E402,F401,E501",
  "src/devsynth/adapters/chromadb_memory_store.py: E501",
  "src/devsynth/application/edrr/coordinator/core.py: E501",
]

[tool.devsynth]
project_root = "."
language = "python"
directories = {source = ["src"], tests = ["tests"], docs = ["docs"]}
features = {}

# === Pytest Configuration ===
# Consolidated from pytest.ini for centralized configuration management
[tool.pytest.ini_options]
# === Core Configuration ===
# Run tests from the tests directory only to prevent template collection
testpaths = ["tests"]
norecursedirs = ["templates", ".hypothesis", ".pytest_cache", "__pycache__", ".git", "src"]
# Only collect test classes from files that are clearly test files
python_classes = ["Test*", "*Suite"]
python_files = ["test_*.py", "*_test.py"]

# === Default Options ===
# Optimized for fast feedback with selective execution
# Override with PYTEST_ADDOPTS or -m for different test sets
addopts = [
    "-p", "no:benchmark",
    "--cov=src/devsynth",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=json:test_reports/coverage.json",
    # Load sitecustomize early for Python 3.12+ compatibility patches
    "--pythonpath", "src",
    # Fail runs below 90% aggregate coverage. Override with
    #   PYTEST_ADDOPTS="--cov-fail-under=<value>" or
    #   DEVSYNTH_COV_FAIL_UNDER=<value>
    # when intentionally running focused suites (e.g., smoke triage).
    "--cov-fail-under=90",
    "-m", "not slow and not gui and not memory_intensive",
    "--strict-markers",
    "--strict-config",
    "-ra"
]

markers = [
    # Resource availability markers
    "requires_resource(name): mark test as requiring an external resource",
    "resource_anthropic: derived marker for selecting Anthropic-gated tests (auto-added)",
    "resource_chromadb: derived marker for selecting ChromaDB-gated tests (auto-added)",
    "resource_cli: derived marker for selecting CLI-gated tests (auto-added)",
    "resource_codebase: derived marker for selecting codebase-dependent tests (auto-added)",
    "resource_duckdb: derived marker for selecting DuckDB-gated tests (auto-added)",
    "resource_faiss: derived marker for selecting FAISS-gated tests (auto-added)",
    "resource_kuzu: derived marker for selecting Kuzu-gated tests (auto-added)",
    "resource_lmdb: derived marker for selecting LMDB-gated tests (auto-added)",
    "resource_lmstudio: derived marker for selecting LM Studio-gated tests (auto-added)",
    "resource_memory: derived marker for selecting memory-gated tests (auto-added)",
    "resource_openai: derived marker for selecting OpenAI-gated tests (auto-added)",
    "resource_rdflib: derived marker for selecting RDFLib-gated tests (auto-added)",
    "resource_test_resource: derived marker for selecting test resource-gated tests (auto-added)",
    "resource_tinydb: derived marker for selecting TinyDB-gated tests (auto-added)",
    "resource_webui: derived marker for selecting WebUI-gated tests (auto-added)",
    "requires_llm_provider: mark test as requiring an LLM provider",

    # Speed markers (exactly one required per test)
    "fast: mark test as fast (execution time < 1s)",
    "medium: mark test as medium speed (execution time between 1s and 5s)",
    "slow: mark test as slow (execution time > 5s)",

    # Test type markers
    "unit: mark test as a unit test subset",
    "integration: mark test as an integration test",
    "integtest: mark integration-provider smoke tests",
    "performance: mark test as a performance test",
    "property: mark property-based test (opt-in via DEVSYNTH_PROPERTY_TESTING)",
    "smoke: mark test as part of smoke profile (minimal plugins, no parallel)",

    # Execution context markers
    "isolation: mark test as requiring isolation (should be run separately from other tests)",
    "gui: mark test as requiring GUI or optional UI extras (NiceGUI/DearPyGUI)",
    "docker: mark test as requiring Docker",
    "memory_intensive: mark test as using significant memory",
    "no_network: mark test as not performing network access",

    # Functional area markers
    "apispec-generation: mark test as related to API specification generation",
    "code-analysis: mark test as related to code analysis functionality",
    "dbschema-generation: mark test as related to database schema generation",
    "docs-generation: mark test as related to documentation generation",
    "ingest: mark test as related to project ingestion functionality",
    "manifest-analysis: mark test as related to manifest analysis functionality",
    "manifest-validation: mark test as related to manifest validation",
    "metadata-validation: mark test as related to metadata validation",
    "refactor: mark test as related to refactoring functionality",
    "requirements-management: mark test as related to requirements management",
    "test-metrics: mark test as related to test metrics functionality",
    "test_metrics: alias for test metrics functionality",
    "webapp-generation: mark test as related to web application generation",

    # Special markers
    "allow_real_coverage_artifacts: opt-in to exercising real coverage artifact helpers during tests",
    "run_pipeline: mark test as related to pipeline execution",
    "security-audit: mark test as related to security audit functionality",
    "cli: mark test as part of the CLI verification suite",
    "asyncio: mark test as using pytest-asyncio integration",
    "anyio: mark test as using anyio test harness",
    "reqid(tag): annotate tests with a requirements identifier tag",
]

# Configure asyncio mode for pytest-asyncio
# asyncio_mode = "auto"  # Temporarily disabled due to pytest-asyncio configuration conflict

# BDD features base directory - using pytest-bdd 8.1.0 compatible format
bdd_features_base_dir = "tests/behavior/features"

# Load test categorization plugin

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
